@@ -9,6 +9,7 @@
 
     using Microsoft.VisualBasic.CompilerServices;
 
+    [Serializable]
     public class CompareExpression : BinaryExpression
     {
         private Func<object, object, bool, object> function;
