@@ -7,6 +7,7 @@
 
     using Microsoft.VisualBasic.CompilerServices;
 
+    [Serializable]
     public class ConcatenateExpression : BinaryExpression
     {
         public ConcatenateExpression(IExpression left, IExpression right)
