@@ -1,17 +1,17 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{20C30A1C-05D3-48C6-A371-5FD522499DD2}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{034845A2-0C7A-4655-8CBD-A40A927569E9}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AjLanguage.Tests</RootNamespace>
-    <AssemblyName>AjLanguage.Tests</AssemblyName>
+    <RootNamespace>AjSharp.RunHost</RootNamespace>
+    <AssemblyName>AjSharp.RunHost</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,43 +31,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.ServiceModel">
+      <RequiredTargetFramework>3.0</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Xml.Linq">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.DataSetExtensions">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BindingEnvironmentTest.cs" />
-    <Compile Include="ChannelTests.cs" />
-    <Compile Include="CommandsTests.cs" />
-    <Compile Include="HostTests.cs" />
-    <Compile Include="QueueChannelTests.cs" />
-    <Compile Include="DynamicClassTests.cs" />
-    <Compile Include="DynamicObjectTests.cs" />
-    <Compile Include="ExpressionsTests.cs" />
-    <Compile Include="ExpressionUtilitiesTests.cs" />
-    <Compile Include="FunctionTests.cs" />
-    <Compile Include="FutureTests.cs" />
-    <Compile Include="MachineTests.cs" />
-    <Compile Include="ObjectEnvironmentTests.cs" />
-    <Compile Include="ObjectUtilitiesTests.cs" />
-    <Compile Include="PredicatesTests.cs" />
-    <Compile Include="PrimitivesTests.cs" />
+    <Compile Include="IRunServer.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SerializationTests.cs" />
-    <Compile Include="StringUtilitiesTests.cs" />
-    <Compile Include="TypeUtilitiesTests.cs" />
+    <Compile Include="RunServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AjLanguage\AjLanguage.csproj">
       <Project>{20458D50-3D54-45DD-9E22-5B2289B6AB91}</Project>
       <Name>AjLanguage</Name>
     </ProjectReference>
+    <ProjectReference Include="..\AjSharp\AjSharp.csproj">
+      <Project>{C2B2BD8F-A94E-4A15-BE60-A8B68CDA0795}</Project>
+      <Name>AjSharp</Name>
+    </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
